@@ -49,7 +49,9 @@ Build system
 
 ### Cmake
 
-- new option `-DAUTOBUILD` that configures scip with dependencies on availability. Packages like Ipopt, Papilo, Readline, Zimpl, ZLIB, GMP, Worhp are automatically found and linked, otherwise ignored. The individual flags for these packages are ignored. This makes a quick build easier. It is by default set to off.
+- new option `-DAUTOBUILD` that configures scip with dependencies on availability.
+  Packages like Ipopt, PaPILO, Readline, Zimpl, ZLIB, GMP, Worhp are automatically found and linked, otherwise ignored.
+  The individual flags for these packages are ignored. This makes a quick build easier. It is by default set to off.
 
 ### Makefile
 
